Finish ux of BeLucky Game

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,17 @@
 <resources>
     <string name="app_name">AperoMix</string>
 
+    <string name="BeLuckyBegin">Bienvenue à BeLucky Land, êtes-vous prêt pour une folle aventure ? \n\n &#127881;&#127866;&#128513;&#128513;&#127866;&#127881;</string>
+    <string name="BeLuckyCase2">Alors on lance comme une fille ? Aller relance et mis y du tien cette fois-ci &#128170;&#127922; </string>
+    <string name="BeLuckyCase3">La partie commence bien pour toi ! Bois 2 gorgées et plus vite que ça ! &#127866;</string>
+    <string name="BeLuckyCase4">Retour case départ pour toi ! &#128074; \nEt au passage bois 1 gorgée &#127866;</string>
+    <string name="BeLuckyCase7">Retour case départ pour toi ! &#128074; \nEt au passage bois 1 gorgée &#127866;</string>
+    <string name="BeLuckyCase8">Bah dit donc, tu étais à deux doigts d\'arriver au tunnel &#128527; \nCa sera pour le prochain tour ! En attendant bois 3 gorgées ! &#127866;</string>
+    <string name="BeLuckyCase9">Hop là, pas si vite ! &#9995; \nSi tu veux aller de l\'autre côté tu dois d\'abord payer la taxe de tunnel. Bois 1 gorgée par joueur ayant déjà utilisé ce tunnel, si tu es le premier bois 2 gorgées pour le mettre en marche ! &#127866;</string>
+    <string name="BeLuckyCase11">Aie aie aie ! \nJ\'en connais un(e) qui va pouvoir se venger de toutes les crasses que les autres joueurs lui ont faites ! &#128520; \ndistrubu 3 gorgées &#127866;</string>
+    <string name="BeLuckyCase12">Aie aie aie ! \nJ\'en connais un(e) qui va pouvoir se venger de toutes les crasses que les autres joueurs lui ont faites ! &#128520; \ndistrubu 4 gorgées &#127866;</string>
+    <string name="BeLuckyCase15">Tu pensais peut-être gagner directement sans boire un dernier coup ? &#128514;&#128514; \nC\'est pas le genre de la maison, aller bois 3 gorgées &#127866;</string>
+    <string name="BeLuckyCase16">Tu pensais peut-être gagner directement sans boire un dernier coup ? &#128514;&#128514; \nC\'est pas le genre de la maison, aller bois 3 gorgées &#127866;</string>
+    <string name="BeLuckyCase17">Aie ! Coup dur pour toi.. Tu retourne au tunnel, ca t\'apprendra à vouloir griller les étapes ! Bois 2 gorgées au passage &#127866;</string>
+    <string name="BeLuckyCase18">&#127881;&#127881; BIEN JOUÉ &#127881;&#127881; \n\nQui lu cru, nous avons un gagnant ! Aller champion distribu aux joueurs de ton choix autant de gorgées qu\'il reste de joueur &#127866;</string>
 </resources>
