--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,7 +22,7 @@
     <string name="fragment_register_email">Adresse email</string>
     <string name="fragment_register_pseudo">Pseudonyme</string>
     <string name="fragment_register_password">Mot de passe</string>
-    <string name="fragment_register_password_info">Le mot de passe doit contenir au moins 8 caractères, une majuscule ainsi qu\'un chiffre.</string>
+    <string name="fragment_register_password_info">Le mot de passe doit contenir au moins 8 caractères, une majuscule et au moins un chiffre.</string>
     <string name="fragment_register_confirmpassword">Confirmer votre mot de passe</string>
     <string name="fragment_register_phone_numbre">Numéro de téléphone</string>
     <string name="fragment_register_birthday">Date de naissance :</string>
